--- a/assets/css/technical-documentation.css
+++ b/assets/css/technical-documentation.css
@@ -1,6 +1,8 @@
 :root {
     --fs-600: 24px;
+    --fs-500: 18px;
     --fs-400: 16px;
+    --fs-300: 14px;
 }
 
 html {
@@ -81,4 +83,69 @@ body {
 
 .main-section a:hover {
     font-weight: bold;
+}
+
+.main-section h3 {
+    font-weight: normal;
+    padding-left: 1rem;
+    font-size: var(--fs-500);
+}
+
+.main-section code {
+    font-family: 'JetBrains Mono', monospace;
+    font-size: var(--fs-300);
+    display: block;
+    width: fit-content;
+    text-align: left;
+    white-space: pre-line;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
+    background-color: white;
+    color: black;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 5px;
+    margin-left: 2rem;
+}
+
+.main-section pre {
+    font-family: 'JetBrains Mono', monospace;
+}
+
+@media (max-width: 800px) {
+    :root {
+        --fs-600: 20px;
+        --fs-500: 16px;
+        --fs-400: 14px;
+        --fs-300: 12px;
+    }
+
+    #navbar {
+        position: static;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem auto;
+        width: 80vw;
+        height: 25vh;
+        text-align: center;
+    }
+
+    #navbar header {
+        margin: 0.5rem auto;
+    }
+
+    #navbar ul li {
+        margin: 0.5rem auto;
+    }
+
+    #main-doc {
+        margin: 0;
+        padding: 1rem;
+    }
+
+    .main-section p {
+        padding-left: 1rem;
+    }
 }
